--- a/generate-data.ipynb
+++ b/generate-data.ipynb
@@ -95,7 +95,7 @@
     "for c in c_lst:\n",
     "    for a in a_lst:\n",
     "        for b in b_lst:\n",
-    "            gen_tf = GenerateTF(fb_attn_index=3)\n",
+    "            gen_tf = GenerateTF(fb_attn_index=3, with_noise=True)\n",
     "            x = gen_tf.frequency\n",
     "            # Draw the random points, following the normal distribution\n",
     "            # y = func(a, b, c, x)\n",
