--- a/classifier_demo.ipynb
+++ b/classifier_demo.ipynb
@@ -56,7 +56,7 @@
    ],
    "source": [
     "# Load the data\n",
-    "df = pd.read_pickle('./data/transfer-functions-82000.pkl')\n",
+    "df = pd.read_pickle('./data/new-transfer-functions-82000.pkl')\n",
     "df.head()"
    ],
    "metadata": {
@@ -224,7 +224,7 @@
     "# we will build one model per output target\n",
     "n_outputs = len(gain_encoder.classes_)\n",
     "\n",
-    "model2 = Net(n_inputs, n_outputs, name='classifier2', activation_func=F.gelu,\n",
+    "model2 = Net(n_inputs, n_outputs, name='gain_classifier', activation_func=F.gelu,\n",
     "             hidden_1=420, hidden_2=350, hidden_3=0,\n",
     "             avg_pool=(4,4), trim_edges=120, save_best=True)\n",
     "print(model2)\n",
@@ -251,8 +251,8 @@
     "# model1.load_state_dict(torch.load('models/model1.pt'))\n",
     "# model2.load_state_dict(torch.load('models/model2.pt'))\n",
     "\n",
-    "model1.load(optimizer=optimizer1, filename='models/phase_classifier-acc62.pt')\n",
-    "model2.load(optimizer=optimizer2, filename='models/gain_classifier-acc99.pt')\n"
+    "model1.load(optimizer=optimizer1, filename='models/new_phase_classifier-acc62.pt')\n",
+    "model2.load(optimizer=optimizer2, filename='models/new_gain_classifier-acc99.pt')\n"
    ],
    "metadata": {
     "collapsed": false,
