adds demo for measurement data

--- a/keras_evaluation.ipynb
+++ b/keras_evaluation.ipynb
@@ -49,7 +49,7 @@
     "from scipy.optimize import curve_fit\n",
     "from prettytable import PrettyTable\n",
     "\n",
-    "from pytorchClassifiers import get_keras_nn, plot_history\n",
+    "from pytorchClassifiers import get_keras_nn\n",
     "\n",
     "avg_pool1d = keras.layers.AveragePooling1D\n",
     "\n"
